hero banner scaling issue fix
Fixed the bug that stretched out the hero banner and scaled differently for each screen size

--- a/assets/css/zilom.css
+++ b/assets/css/zilom.css
@@ -171,7 +171,17 @@ ul {
     }
 }
 
+/* Hero Banner Fixes 
+.hero-banner {
+	position: absolute;
+}*/
 
+.hero-banner {
+	/* position: absolute; */
+	padding: 50%;
+	transform: translate(0, -50%);
+	top: 50%;
+}
 
 
 .bootstrap-select .btn-light:not(:disabled):not(.disabled).active,
